# violin

./: .env.example  README.md  main.py  pyproject.toml
.claude/: settings.json
api/routes/: catalog.py
api/static/: index.html
config/: default.yaml  other_api.yaml
pipeline/: cache.py  llm_client.py  merger.py  orchestrator.py  pricing.py  transcriber.py  translator.py  tts.py  tts_volcengine.py  volcengine_asr.py
